Closed
Bug 165883
Opened 22 years ago
Closed 22 years ago
Chimera hangs when minimize is pushed while the location drop down box is open
Categories
(Camino Graveyard :: Location Bar & Autocomplete, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Chimera0.6
People
(Reporter: pkilpatrick, Assigned: mikepinkerton)
Details
(Keywords: hang)
Attachments
(1 file)
5.75 KB,
application/x-macbinary
|
Details |
I have the toolbar on text only, so when you click location, the box comes down
to type urls into. If you click minimize for the window while the box is open
the program crashes.
Summary: Crashes when minimize is pushed while the location pop-up is open → Crashes when minimize is pushed while the location drop down box is open
Paul, what build ID are you reporting this bug against?
Keywords: crash,
stackwanted
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: crash,
stackwanted
Summary: Crashes when minimize is pushed while the location drop down box is open → Chimera crashes when minimize is pushed while the location drop down box is open
Using Chimera/2002082705 on 10.1.5, Chimera doesn't crash, but it does hang.
Paul, are you sure you mean that it crashes, that it "unexpectedly quits?"
This is for Navigator 0.4 on OSX 10.1.5
It causes a hang which requires a force quit
Keywords: hang
Summary: Chimera crashes when minimize is pushed while the location drop down box is open → Chimera hangs when minimize is pushed while the location drop down box is open
Comment 4•22 years ago
|
||
yeah, i can repro this with 2002.09.03.05.
Comment 5•22 years ago
|
||
forgot to add: the minimize and maximize buttons are accessible when the
Location sheet drops down. shouldn't they be disabled?
Comment 7•22 years ago
|
||
sample taken during hang. OS 10.2, chimera 8/25/02 nightly.
Assignee | ||
Comment 8•22 years ago
|
||
here's the problem:
- cocoa tells us to miniaturize
- in this process, it for some reason tells us we are the key window
- we happily pass this along and tell gecko we have focus
- gecko sets visibility on the window to true
- cocoa tries to deminiaturize the window
at this point, it we try to re-enter appkit and are stuck waiting on the
miniaturize transaction lock to complete. they big question here is why are we
told we're the key window?
Status: NEW → ASSIGNED
Target Milestone: --- → Chimera0.6
Assignee | ||
Comment 9•22 years ago
|
||
the reason we become the key window is because miniaturizing the window rolls up
the location sheet. this then makes the browser the key window and sends us the
notification as the window's delegate.
hrm, i guess we either need a find a way to suppress sending the activate if we
know we're being miniaturized, or (better) make gecko not deminiaturize a window
when it gets focus.
still looking.
Assignee | ||
Comment 10•22 years ago
|
||
ok, so i have a patch that:
- doesn't try to deminiaturize a window when it gets focus
- doesn't bring a window to the fg when it gets focus
i don't know why we would want to do either of these things, honestly. the fixes
are all in chimera, not gecko, so we're still on the level of application
implementation policies, which is good. i think it's perfectly ok for chimera to
have a policy that windows that are miniaturized stay that way and windows in
the bg stay that way. this shouldn't affect popups, because those normally come
up in front anyway, and you know what, big deal if they don't.
thoughts? the fix is really just commenting out a couple of lines in the
CHBrowserListener.
Assignee | ||
Comment 11•22 years ago
|
||
fwiw, it appears they fixed the deadlock on jaguar, now it just hangs for a long
time, then gives up and miniaturizes the window. still, i think we should avoid
all this mess and change the offending policies.
Assignee | ||
Comment 12•22 years ago
|
||
fixed w/out neutering the setFocus method. another day, my foe!
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 13•22 years ago
|
||
minimize and maximize/restore behave nicely now. tested with 2002.09.24.12 on
10.1.5.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•