Fix cocoa re-entrancy problem minimizing window with a sheet (bug 165883), restore sidebar to standard cocoa behavior (no longer resizes window; fixes 167641 among other things).