mozilla/chimera/src/embedding/CHBrowserListener.mm
@@ -385,20 +385,23 @@ CHBrowserListener::GetDimensions(PRUint32 flags,  PRInt32 *x,  PRInt32 *y, PRInt
   return NS_OK;
 }
 
+#define BRING_FOCUSED_WINDOWS_TO_FG 1
+
 /* void setFocus (); */
 NS_IMETHODIMP 
 CHBrowserListener::SetFocus()
 {
-  if (!mView) {
-    return NS_ERROR_FAILURE;
-  }
-
+#if BRING_FOCUSED_WINDOWS_TO_FG
   NSWindow* window = [mView window];
-  if (!window) {
+  if (!window) 
     return NS_ERROR_FAILURE;
-  }
-
-  [window makeKeyAndOrderFront:window];
+  
+  // if we're already the keyWindow, we certainly don't need to do it again. This
+  // ends up fixing a problem where we try to bring ourselves to the front while we're
+  // in the process of miniaturizing the window
+  if ( window != [NSApp keyWindow] )
+    [window makeKeyAndOrderFront:window];
+#endif
 
   return NS_OK;
 }
@@ -422,24 +425,24 @@ CHBrowserListener::GetVisibility(PRBool *aVisibility)
 
   return NS_OK;
 }
+
 NS_IMETHODIMP 
 CHBrowserListener::SetVisibility(PRBool aVisibility)
 {
-  if (!mView) {
-    return NS_ERROR_FAILURE;
-  }
-
   NSWindow* window = [mView window];
-  if (!window) {
+  if (!window)
     return NS_ERROR_FAILURE;
-  }
 
-  if (aVisibility) {
+#if 0
+// if the user wants a window miniaturized, damnit, it's gonna stay that
+// way until they decide to deminiaturize it themselves. there's no reason
+// why a window needs to pop out of the dock just because it's done loading
+// and wants to set focus.
+  if (aVisibility)
     [window deminiaturize:window];
-  }
-  else {
+  else
     [window miniaturize:window];
-  }
+#endif
 
   return NS_OK;
 }
